# paddock

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  mdq.toml
.claude/commands/: keiba-start.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
deployments/: api.Dockerfile  compose.yaml  importer-entrypoint.sh  importer.Dockerfile  web.Dockerfile  web.nginx.conf
deployments/db/: BACKUP.md
deployments/launchd/: README.md  com.paddock.backup-db.plist  com.paddock.backup-staleness.plist  com.paddock.keep-awake.plist  com.paddock.prefetch-odds.plist  com.paddock.purge-snapshots.plist  com.paddock.verify-backup-restore.plist  install.sh  uninstall.sh
docs/adr/: 0001-jra-odds-scraper.md  0002-probability-estimation.md  0003-ev-kelly-bet-selection.md  0004-predict-session-binary.md  0005-wire-odds-into-predict.md  0006-backtest-evaluation.md  0007-probability-monotonicity-jockey.md  0008-netkeiba-same-day-datasource.md  0009-recent-form-feature.md  0010-persist-and-reference-odds.md  0011-track-condition-feature.md  (+66 more)
scripts/: backup-db.sh  backup-staleness-check.sh  check-adr-numbers.sh  install-git-hooks.sh  mdq  purge-snapshots.sh  reset-db.sh  seed-db.sh  test-db-guards.sh  verify-backup-restore.sh
src/apps/analyze/: Cargo.toml
src/apps/analyze/src/: bin.rs  cli.rs  printer.rs  setup.rs
src/apps/api-server/: Cargo.toml
src/apps/api-server/src/: app.rs  bin.rs  lib.rs  setup.rs
src/apps/api-server/tests/: api.rs  openapi.rs  openapi_route_parity.rs  prediction.rs  session.rs
src/apps/fetch-history/: Cargo.toml
src/apps/fetch-history/src/: bin.rs  cli.rs  setup.rs
src/apps/fetch-results/: Cargo.toml
src/apps/fetch-results/src/: bin.rs  cli.rs  setup.rs
src/apps/ingest-predictions/: Cargo.toml
src/apps/ingest-predictions/src/: bin.rs  cli.rs  input.rs  render.rs  setup.rs
src/apps/ingest-predictions/tests/: roundtrip.rs
src/apps/odds-collect/: Cargo.toml
src/apps/odds-collect/src/: bin.rs  cli.rs  collect.rs  setup.rs
src/apps/parse-entries/: Cargo.toml
src/apps/parse-entries/src/: bin.rs  cli.rs  setup.rs
src/apps/parse-pdf/: Cargo.toml
src/apps/parse-pdf/src/: bin.rs  cli.rs  setup.rs
src/apps/predict/: Cargo.toml
src/apps/predict-watch/: Cargo.toml
src/apps/predict-watch/src/: bin.rs  cli.rs  setup.rs  snapshot.rs  watch.rs
src/apps/predict/src/: bin.rs  cli.rs  session.rs  setup.rs
src/apps/simulate/: Cargo.toml
src/apps/simulate/src/: bin.rs  cli.rs  input.rs
src/apps/web-viewer/: Cargo.toml
src/apps/web-viewer/assets/: app.css  app.js  index.html
src/apps/web-viewer/src/: bin.rs  config.rs  render.rs  tree.rs
src/interface/entry-parser/: Cargo.toml
src/interface/entry-parser/src/: error.rs  lib.rs  mutool.rs  parser.rs
src/interface/entry-parser/src/extract/: mod.rs  stext.rs
src/interface/entry-parser/tests/: test_parse.rs
src/interface/netkeiba-scraper/: Cargo.toml
src/interface/netkeiba-scraper/src/: error.rs  lib.rs  scraper.rs
src/interface/netkeiba-scraper/src/parse/: card.rs  horse_history.rs  mod.rs  odds.rs  payout.rs  result.rs  shutuba.rs
src/interface/netkeiba-scraper/tests/: parse_card.rs  parse_exotic_odds.rs  parse_horse_history.rs  parse_payout.rs  parse_result.rs  parse_shutuba.rs  parse_win_odds.rs  parse_win_place_odds.rs
src/interface/netkeiba-scraper/tests/fixtures/: horse_result.html  odds_exacta.json  odds_quinella.json  odds_trifecta.json  odds_trio.json  odds_wide.json  odds_win.json  odds_win_middle.json  race_result.html  shutuba.html  shutuba_card.html
src/interface/odds-scraper/: Cargo.toml
src/interface/odds-scraper/src/: error.rs  lib.rs  scraper.rs
src/interface/odds-scraper/src/parse/: mod.rs
src/interface/odds-scraper/tests/: test_parse.rs
src/interface/odds-scraper/tests/fixtures/: exacta.html  quinella.html  trifecta.html  trio.html  wide.html  win_place.html
src/interface/pdf-parser/: Cargo.toml
src/interface/pdf-parser/src/: error.rs  fetcher.rs  hybrid.rs  lib.rs  parser.rs
src/interface/pdf-parser/src/extract/: header.rs  jockey_stext.rs  mod.rs  row.rs
src/interface/pdf-parser/tests/: test_parse.rs
src/interface/rdb-gateway/: Cargo.toml
src/interface/rdb-gateway/src/: error.rs  lib.rs  pool.rs
src/interface/rdb-gateway/src/repositories/: backfill_horse_ids.rs  course_stats.rs  fetch_history.rs  find_finished_races_between.rs  find_jockey_recent_runs.rs  find_live_ev_by_date.rs  find_matching_names.rs  find_post_times_by_date.rs  find_race_card.rs  find_race_classes_by_date.rs  find_race_names_by_date.rs  find_race_odds.rs  find_races_by_date.rs  find_recent_runs.rs  find_result_reads.rs  horse_history.rs  horse_stats.rs  jockey_stats.rs  mod.rs  pad_prediction.rs  predict_session.rs  purge_race_odds_snapshots.rs  save_live_ev.rs  save_race.rs  save_race_card.rs  save_race_odds.rs  sql.rs  standard_times.rs  trainer_stats.rs  update_results.rs  upsert_history_race.rs  upsert_results.rs
src/interface/rdb-gateway/tests/: test_backfill_horse_ids.rs  test_backtest_as_of.rs  test_conditional_gate_stats.rs  test_fetch_history.rs  test_find_jockey_recent_runs.rs  test_find_matching_names.rs  test_find_races_by_date.rs  test_find_recent_runs.rs  test_horse_history_separation.rs  test_live_ev_persistence.rs  test_pool_config.rs  test_predict_persistence.rs  test_race_odds_persistence.rs  test_reingest_non_destructive.rs  test_standard_times.rs  test_stats_batch_equivalence.rs
src/interface/rest-controller/: Cargo.toml
src/interface/rest-controller/src/: lib.rs  openapi.rs
src/interface/rest-controller/src/error/: mod.rs
src/interface/rest-controller/src/handler/: analyze.rs  live.rs  mod.rs  prediction.rs  race.rs  results.rs  session.rs
src/interface/rest-controller/src/router/: analyze.rs  live.rs  mod.rs  prediction.rs  race.rs  results.rs  session.rs
src/interface/rest-controller/src/schema/: analyze.rs  live.rs  mod.rs  prediction.rs  race.rs  results.rs  session.rs
web/: .dockerignore  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+409 files in other folders)
