[workspace]
resolver = "3"
members = [
    "src/apps/parse-pdf",
    "src/apps/parse-entries",
    "src/apps/analyze",
    "src/apps/predict",
    "src/apps/predict-watch",
    "src/apps/fetch-history",
    "src/apps/fetch-card",
    "src/apps/fetch-results",
    "src/apps/simulate",
    "src/apps/web-viewer",
    "src/apps/ingest-predictions",
    "src/apps/api-server",
    # Standalone library crate: not yet consumed by any binary, so it is listed
    # explicitly to stay part of the workspace build/test graph.
    "src/interface/odds-scraper",
]

[workspace.dependencies]
anyhow             = { version = "1.0.*" }
actix-web          = { version = "4.*" }
ordered-float      = { version = "5.*" }
pulldown-cmark     = { version = "0.12.*", default-features = false, features = ["html"] }
chrono             = { version = "0.4.*", features = ["serde"] }
clap               = { version = "4.6.*", features = ["derive"] }
dotenvy            = { version = "0.15.*" }
encoding_rs        = { version = "0.8.*" }
envy               = { version = "0.4.*" }
regex              = { version = "1.12.*" }
scraper            = { version = "0.27.*" }
serde              = { version = "1.0.*", features = ["derive"] }
serde_json         = { version = "1.0.*" }
sqlx               = { version = "0.9.*", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "migrate", "macros"] }
strum_macros       = { version = "0.28.*" }
thiserror          = { version = "2.0.*" }
tempfile           = { version = "3.*" }
tokio              = { version = "1.*", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tracing            = { version = "0.1.*" }
tracing-log        = { version = "0.2.*" }
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
ureq               = { version = "3.*", default-features = false, features = ["rustls"] }
utoipa             = { version = "5.*", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui  = { version = "8.*", features = ["actix-web"] }

paddock-domain     = { path = "src/domain" }
paddock-use-case   = { path = "src/use-case" }
paddock-config     = { path = "src/infrastructure/config" }
entry-parser       = { path = "src/interface/entry-parser" }
pdf-ocr            = { path = "src/interface/pdf-ocr" }
pdf-parser         = { path = "src/interface/pdf-parser" }
odds-scraper       = { path = "src/interface/odds-scraper" }
netkeiba-scraper   = { path = "src/interface/netkeiba-scraper" }
scraper-util       = { path = "src/interface/scraper-util" }
rdb-gateway        = { path = "src/interface/rdb-gateway" }
jra-fetcher        = { path = "src/interface/jra-fetcher" }
rest-controller    = { path = "src/interface/rest-controller" }
predict-format     = { path = "src/interface/predict-format" }
