[package]
name = "fetch-history"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddock-fetch-history"
path = "src/bin.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
netkeiba-scraper   = { workspace = true }
paddock-config     = { workspace = true }
paddock-use-case   = { workspace = true }
rdb-gateway        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
