[package]
name = "ingest-predictions"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddock-ingest-predictions"
path = "src/bin.rs"

[dependencies]
anyhow           = { workspace = true }
chrono           = { workspace = true }
clap             = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
paddock-config   = { workspace = true }
paddock-domain   = { workspace = true }
paddock-use-case = { workspace = true }
rdb-gateway      = { workspace = true }
tokio            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sqlx     = { workspace = true }
