[package]
name = "parse-entries"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddock-parse-entries"
path = "src/bin.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
entry-parser       = { workspace = true }
paddock-config     = { workspace = true }
paddock-use-case   = { workspace = true }
rdb-gateway        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ureq               = { workspace = true }
