[package]
name = "predict-watch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddock-predict-watch"
path = "src/bin.rs"

[dependencies]
anyhow             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
paddock-config     = { workspace = true }
paddock-domain     = { workspace = true }
paddock-use-case   = { workspace = true }
netkeiba-scraper   = { workspace = true }
monitor-loop       = { workspace = true }
predict-format     = { workspace = true }
rdb-gateway        = { workspace = true }
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
