[package]
name = "simulate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddock-simulate"
path = "src/bin.rs"

[dependencies]
anyhow         = { workspace = true }
clap           = { workspace = true }
paddock-domain = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
