[package]
name = "web-viewer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "paddock-web"
path = "src/bin.rs"

[dependencies]
actix-web          = { workspace = true }
anyhow             = { workspace = true }
pulldown-cmark     = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
