[package]
name = "entry-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
paddock-domain    = { workspace = true }
paddock-use-case  = { workspace = true }
regex             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tempfile          = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }

[[test]]
name = "test_parse"
path = "tests/test_parse.rs"
