[package]
name = "netkeiba-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
paddock-domain   = { workspace = true }
paddock-use-case = { workspace = true }
chrono           = { workspace = true }
regex            = { workspace = true }
scraper          = { workspace = true }
scraper-util     = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
ureq             = { workspace = true }
