[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono           = { workspace = true }
paddock-domain   = { workspace = true }
paddock-use-case = { workspace = true }
pdf-ocr          = { workspace = true }
regex            = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }

[dev-dependencies]
# Test-only: the shared `sample_pdf_fixture.rs` downloads the sample result PDF
# with its own minimal ureq agent. The fixture is a standalone `#[path]`-included
# file (kept crate-free by design), so it does not go through `jra-fetcher`.
ureq             = { workspace = true }
