[package]
name = "rdb-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono           = { workspace = true }
paddock-domain   = { workspace = true }
paddock-use-case = { workspace = true }
sqlx             = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }

[[test]]
name = "test_predict_persistence"
path = "tests/test_predict_persistence.rs"

[[test]]
name = "test_find_races_by_date"
path = "tests/test_find_races_by_date.rs"
